--- a/package.json
+++ b/package.json
@@ -15,9 +15,31 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "lodash": "^4.17.21",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.0",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "engines": {
+    "node": ">= 18.2.0 < 19.0.0",
+    "npm": ">= 8.9.0 < 9.0.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/prettier": "^2.7.2",
+    "prettier": "^2.8.4",
+    "eslint": "8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.1.6",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0"
   }
 }
