--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,21 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "experimentalDecorators": true,
+    "noUncheckedIndexedAccess": true,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      "isolatedModules": true,
+      "lib": [
+        "ES2020"
+      ],
+      "module": "commonjs",
+      "target": "ES2020"
+    }
+  }
 }
