--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@sniptt/monads": "^0.5.10",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.0.10",
+    "@types/validator": "^13.7.12",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "lodash": "^4.17.21",
@@ -22,8 +28,10 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "validator": "^13.9.0"
   },
   "engines": {
     "node": ">= 18.2.0 < 19.0.0",
@@ -32,7 +40,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "@types/prettier": "^2.7.2",
-    "prettier": "^2.8.4",
     "eslint": "8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.1.6",
@@ -40,6 +47,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0"
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.8.4"
   }
 }
